--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,103 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+.app{
+  background-image: url('./assests/coldbg.jpeg');
+  background-size: cover; 
+  background-position: bottom;
+  transition: 0.4 ease-out;
+}
+
+.app.warm{
+  background-image: url('./assests/warmbg.jpeg');
+}
+
+main{
+  min-height: 100vh;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.70));
+  padding: 25px;
+}
+
+.search-box{
+
+  width: 100%;
+  margin: 0 0 75px;
+}
+
+.search-box .search-bar{
+  display: block;
+  width: 100%;
+  padding: 15px;  
+
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
+
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 0px 0px 16px 16px;
+  margin-top: -25px;
+
+  box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
+
+  color: #474752;
+  font-size: 20px;
+  transition: 0.4 ease;
+}
+
+.search-box .search-bar{
+  background-color: rgba(223, 213, 213, 0.75);
+}
+
+.location-box .location{
+  color: #fff;
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.60);
+}
+
+.location-box .date{
+  color: #fff;
+  font-weight: 300;
+  font-size: 22px;
+  font-style: italic;
+  text-align:center;
+  text-shadow: 2px 2px rgba(50, 50, 70, 0.60);
+}
+
+.weather-box{
+  text-align: center;
+}
+
+.weather-box .temp{
+  position: relative;
+  display: inline-block;
+  margin: 32px auto;
+  background-color: rgba(255, 255, 255, 0.25);
+  border-radius: 17px;
+
+  padding: 15px 25px;
+
+  color: #fff;
+  font-size: 104px;
+  font-weight: 900;
+
+  text-shadow: 3px 6px rgba(50, 50, 70, 0.60);
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.70);
+}
+
+.weather-box .weather{
+  color:rgb(47, 141, 102);
+  font-size: 50px;
+  font-weight: 700;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.60);
 }
